<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">手書きメモ（仮）</string>
	<string name="action_settings">Settings</string>
	<string name="action_insert_new_note">New</string>
	<string name="action_delete_note">Delete</string>
	<string name="action_change_list_mode">ListMode</string>
	<string name="action_insert_new_page">New</string>
	<string name="action_delete_page">Delete</string>
	<string name="action_undo">Undo</string>
	<string name="action_redo">Redo</string>
	<string name="action_overlay">Overlay</string>
	<string name="action_fullscreen">Full screen</string>
	<string name="page_current_index">%1$d / %2$d</string>
	<string name="note_info_create_date">作成日時 : %1$s</string>
	<string name="note_info_update_date">更新日時 : %1$s</string>
	<string name="note_info_page_count"> %1$s pg</string>
	<string name="note_info_name">Title : %1$s</string>
	<string name="note_info_index">%1$d / %2$d</string>
	<string name="msg_no_next_page">これより先にページはありません</string>
	<string name="msg_no_previous_page">これより前にページはありません</string>
	<string name="msg_overlay_service_start">オーバーレイを開始しました</string>
	<string name="msg_overlay_service_stop">オーバーレイを停止しました</string>

</resources>