<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:compat="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context="com.aizak.drawnote.DrawNoteActivity" >

	<item
		android:id="@+id/action_insert_new_note"
		android:icon="@drawable/add"
		android:orderInCategory="100"
		android:title="@string/action_insert_new_note"
		compat:showAsAction="always"/>
	<item
		android:id="@+id/action_change_list_mode"
		android:icon="@drawable/layout"
		android:orderInCategory="300"
		android:title="@string/action_change_list_mode"
		compat:showAsAction="always"/>
	<item
		android:id="@+id/action_settings"
		android:icon="@drawable/setting"
		android:orderInCategory="400"
		android:title="@string/action_settings"
		compat:showAsAction="always"/>

</menu>